[gd_scene load_steps=9 format=3 uid="uid://bood6cn3jh20l"]

[ext_resource type="Script" path="res://Level.gd" id="1_jtwvy"]
[ext_resource type="PackedScene" uid="uid://dt72b427b4w6f" path="res://Potion.tscn" id="2_cdrnh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ogqrv"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_go85i"]
bg_color = Color(0, 1, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_evmcj"]
bg_color = Color(0, 0, 1, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_3c6u0"]

[sub_resource type="CanvasTexture" id="CanvasTexture_tbylc"]

[sub_resource type="CanvasTexture" id="CanvasTexture_o40ey"]

[node name="Level" type="Node2D"]
script = ExtResource("1_jtwvy")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -3
offset_right = 577.0
offset_bottom = 326.0
mouse_filter = 2
color = Color(0.505882, 0.215686, 0.101961, 1)

[node name="red" type="Button" parent="."]
offset_left = 135.0
offset_top = 246.0
offset_right = 250.0
offset_bottom = 317.0
theme_override_colors/icon_disabled_color = Color(0.988235, 0, 0.458824, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_ogqrv")
theme_override_styles/hover = SubResource("StyleBoxFlat_ogqrv")
text = "Red"

[node name="green" type="Button" parent="."]
offset_left = 285.0
offset_top = 247.0
offset_right = 423.0
offset_bottom = 318.0
theme_override_styles/normal = SubResource("StyleBoxFlat_go85i")
theme_override_styles/hover = SubResource("StyleBoxFlat_go85i")
text = "Green"

[node name="blue" type="Button" parent="."]
offset_left = 444.0
offset_top = 243.0
offset_right = 560.0
offset_bottom = 314.0
theme_override_styles/normal = SubResource("StyleBoxFlat_evmcj")
theme_override_styles/hover = SubResource("StyleBoxFlat_evmcj")
text = "Blue
"

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 215.0
offset_top = 75.0
offset_right = 333.0
offset_bottom = 130.0
texture = SubResource("CanvasTexture_3c6u0")

[node name="Label" type="Label" parent="."]
offset_left = 226.0
offset_top = 126.0
offset_right = 324.0
offset_bottom = 201.0
text = "R: 255
G: 255
B: 255"

[node name="TextureRect2" type="TextureRect" parent="."]
offset_left = 354.0
offset_top = 8.0
offset_right = 517.0
offset_bottom = 78.0
texture = SubResource("CanvasTexture_tbylc")

[node name="Label2" type="Label" parent="."]
offset_left = 418.0
offset_top = 77.0
offset_right = 466.0
offset_bottom = 152.0
text = "R: 255
G: 255
B: 255"

[node name="TextureRect3" type="TextureRect" parent="."]
offset_left = 31.0
offset_top = 9.0
offset_right = 186.0
offset_bottom = 88.0
texture = SubResource("CanvasTexture_o40ey")

[node name="Label3" type="Label" parent="."]
offset_left = 62.0
offset_top = 94.0
offset_right = 110.0
offset_bottom = 169.0
text = "R: 255
G: 255
B: 255"

[node name="Add" type="Button" parent="."]
offset_left = 234.0
offset_top = 33.0
offset_right = 292.0
offset_bottom = 64.0
text = "Add
"

[node name="VSlider" type="VSlider" parent="."]
offset_left = 547.0
offset_top = 27.0
offset_right = 563.0
offset_bottom = 203.0
min_value = 1.0
max_value = 5.0
value = 1.0
tick_count = 5
ticks_on_borders = true

[node name="Potion" parent="." instance=ExtResource("2_cdrnh")]
position = Vector2(65, 278)

[node name="Potion2" parent="." instance=ExtResource("2_cdrnh")]
position = Vector2(174, 202)

[node name="Potion3" parent="." instance=ExtResource("2_cdrnh")]
position = Vector2(41, 199)

[node name="Potion4" parent="." instance=ExtResource("2_cdrnh")]
position = Vector2(349, 181)

[node name="Potion5" parent="." instance=ExtResource("2_cdrnh")]
position = Vector2(456, 207)

[connection signal="button_down" from="red" to="." method="_on_red_button_down"]
[connection signal="button_down" from="green" to="." method="_on_green_button_down"]
[connection signal="button_down" from="blue" to="." method="_on_blue_button_down"]
[connection signal="button_down" from="Add" to="." method="_on_add_button_down"]
[connection signal="value_changed" from="VSlider" to="." method="_on_v_slider_value_changed"]
